<?xml version="1.0" encoding="utf-8"?>
<resources>



    <string name="app_name">Reindeer Game</string>

    <string name="action_settings">Settings</string>

    <string name="label_speed">Choose running speed</string>

    <string name="button_move">Move!</string>
    <string name="button_eat">Eat!</string>
    <string name="button_restart">Restart</string>
    <string name="button_kick">Kick!</string>

    <string name="label_distance">Distance</string>
    <string name="label_ammo">Ammo</string>
    <string name="label_wolf_says">Wolf says</string>
    <string name="label_bear_says">Bear says</string>
    

</resources>

